# TrinaPointAndClick

./: .gitignore  AuxCameraDisplay.cpp  CMakeLists.txt  README.md  main.cpp  point_and_click_controller.py  runAll.sh
src/Trina-Point-And-Click/: CMakeLists.txt  main.cpp  package.xml
src/TrinaPointAndClick/: calibration_params.yml  main.cpp
src/TrinaPointAndClick/launch/: TrinaPointAndClickUI.launch
src/TrinaPointAndClick/scripts/: Marker_List_Node.py
